--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -162,8 +162,6 @@ overflow: initial;
 font-weight: bold;
 }
 li{ list-style-position: inside;}
-
-
 nav a {  
   font-weight: 400;
   opacity: 50%;
@@ -190,7 +188,7 @@ line-height: 140%;
 }
 h2 { font-size: 2em; }
 h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
-.segment h4, .navi nav a{ font-size: 1.3em; }
+.segment h4, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 h4 a, p.l span, p u, p a, li b{
 font-size: 1em;
 }
