--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -28,7 +28,7 @@
 <script>
  $(document).ready(function() {
   
-    $(".body, .navi .nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
+    $(".body, .navi nav, .navi .back").css("display", "none"); // Ensure container is hidden initially
   $(window).on("load", function() {
     $(".body").fadeIn(800); 
     setTimeout(function() {
