--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -608,10 +608,11 @@ gap: 12px;
 </div>
 <div class="body">
     <div id="casestudies" class="section">
-        <p class="l b"><span>Hi I’m Pete, a British Product Designer based in Tokyo with a back pocket brimming with experience.</span> I have created digital products since the very early days of the internets transition into visual design.</p>
-        <p class="m web-only">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider.</p>
+        <div class="segment">
+            <p class="l b"><span>Hi I’m Pete, a British Product Designer based in Tokyo with a back pocket brimming with experience.</span> I have created digital products since the very early days of the internets transition into visual design.</p>
+            <p class="m web-only">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider.</p>
+        </div>
     </div>
-
     <!-- posts start -->
     <div id="posts" class=" section tab-block">
         <h3>Design Journal</h3>
