--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -268,14 +268,14 @@ background: #88A4AA;
 /*/////////////////////////////////////////////////////////////*/
 .container{
 display: flex;
-gap: 0;
+gap: 96px;
 padding: 96px 0 0 96px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
 /*/////////////////////////////////////////////////////////////*/
 .navi{
-width: 244px;
+width: 148px;
 }
 .navi nav{
     margin-bottom: 12px;
