--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -577,10 +577,11 @@ gap: 12px;
         <a href="#posts">Design Journal</a>
     </nav>
     <nav>
-        <a href="#casestudies">Case Studies</a>
+        <a href="#showcase">Case Studies</a>
         <a href="#initial-experience">Initial Experience</a>
         <a href="#content-navigation">Content Navigation</a>
         <a href="#adventure-cards">Adventure Cards</a>
+        <a href="#pulse-football">Pulse Football</a>
     </nav>
     <nav class="links">
         <a href="#">LinkedIn</a>
@@ -728,13 +729,6 @@ gap: 12px;
     <!-- showcase -->
     <div id="showcase" class="tab-block">
         <h3>Showcase</h3>
-        <p class="webc-only" style="padding-bottom: 24px; max-width: 724px;">My <a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank" title="App store link">day</a> to <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank" title="App store link">day</a> work is non disclosure therefore I hope to showcase my visual design ability with some rapid ideation projects. <u>Design processes</u> and how I work professionally are shared confidentially  within my casestudy slide deck.</p>
-        <nav class="tab-menu">
-            <a href="#showcase1" class="selected">Pulse Football</a>
-            <a href="#showcase2">Adventure Card</a>
-            <!--a href="https://play.google.com/store/apps/details?id=com.kddi.newsupport&hl=ja&gl=US" target="_blank">au Usage Support</a
-            <a href="https://play.google.com/store/apps/details?id=com.kddi.photo&hl=ja&gl=US" target="_blank">au Photo Cloud</a-->
-        </nav>
         <div class="scrollable">
             <div id="showcase1" class="tab-container tab-selected">
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
