--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -315,6 +315,9 @@ width: 148px;
     border-width: 1px 0 0 0;
     border-style: solid;
 }
+.navi nav.links a{
+padding: 0;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
 /*/////////////////////////////////////////////////////////////*/
