--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -599,7 +599,7 @@ gap: 12px;
     </div>
     <!-- posts start -->
     <div id="posts" class=" section tab-block">
-        <h3>Design Journal</h3>
+        <h4>Design Journal</h4>
         <nav class="tab-menu">
             <a href="#posts1" class="selected">1</a>
             <a href="#posts2">2</a>
@@ -728,31 +728,10 @@ gap: 12px;
 
     <!-- showcase -->
     <div id="showcase" class="tab-block">
-        <h3>Showcase</h3>
-        <div class="scrollable">
-            <div id="showcase1" class="tab-container tab-selected">
-                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
-            <div>     
-                <p class="l">Pulse Football is a one stop indepth app for fans who need more than just the news.</p>
-                <p>Many football fans obsess over the tiniest piece of information. However finding this information involves searching across numerous websites and media platforms to get a comprehensive understanding of whats happening on a daily basis.</p>
-                <p class="l">Product Overview</p>
-                <ol>
-                    <li>All in one application: news, analysis & community.</li>
-                    <li>Apply IA to simplify information gathering.</li>
-                    <li>Refine information based on user interests.</li>
-                    <li>Create Seemless UX with interaction and transitions.</li>
-                </ol>
-            </div>
-            <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
-            <div class="hypothesis">
-                <p class="l">Football at your finger tips</p>
-                <p>Over the last 7-8 years I have noticed football related products becoming more sophisticated. Notable applications would include Fantasy Premier League, Transfermarkt and One Football.</p>
-                <p>Although One Football is pushing boundaries, football news still feels trapped in an outdated media format, where information is spread across multiple articles.</p>
-                <p>Thanks to the advent of AI, it is now possible to aggregate and combine football information to cater to users' specific needs. This includes providing comprehensive analysis, data insights, and an all-in-one football experience.</p>
-            </div>
-            <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
-            </div>
-            <div id="showcase2" class="tab-container">
+        <h4>Showcase</h4>
+        <div class="scrollable segment">
+            <p>dddddd</p>
+            <div id="showcase2">
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
                 <div>
                     <p class="l">Adventure Card is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
@@ -782,12 +761,33 @@ gap: 12px;
                 </div>
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.4.jpg" />
             </div>
-            <div id="showcase3" class="tab-container">
-                <div><h4>Coming Soon</h4></div>
+        </div>
+        <div class="scrollable segment">
+            <div id="showcase1">
+                <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
+            <div>     
+                <p class="l">Pulse Football is a one stop indepth app for fans who need more than just the news.</p>
+                <p>Many football fans obsess over the tiniest piece of information. However finding this information involves searching across numerous websites and media platforms to get a comprehensive understanding of whats happening on a daily basis.</p>
+                <p class="l">Product Overview</p>
+                <ol>
+                    <li>All in one application: news, analysis & community.</li>
+                    <li>Apply IA to simplify information gathering.</li>
+                    <li>Refine information based on user interests.</li>
+                    <li>Create Seemless UX with interaction and transitions.</li>
+                </ol>
+            </div>
+            <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.2.jpg" />
+            <div class="hypothesis">
+                <p class="l">Football at your finger tips</p>
+                <p>Over the last 7-8 years I have noticed football related products becoming more sophisticated. Notable applications would include Fantasy Premier League, Transfermarkt and One Football.</p>
+                <p>Although One Football is pushing boundaries, football news still feels trapped in an outdated media format, where information is spread across multiple articles.</p>
+                <p>Thanks to the advent of AI, it is now possible to aggregate and combine football information to cater to users' specific needs. This includes providing comprehensive analysis, data insights, and an all-in-one football experience.</p>
+            </div>
+            <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
             </div>
         </div>
-</div>
-<!-- showcase ends -->
+    </div>
+    <!-- showcase ends -->
 </div>
 
 </div>
