--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -103,6 +103,16 @@
     $(this).addClass('selected');
   });
 
+  $( ".tab-menu a").on( "click", function() {
+    var id = $(this).attr('href');
+    var parent = $(this).parents('.tab-block').attr('id');
+    $("#"+parent+" .tab-menu a").removeClass('selected');
+    $(this).addClass('selected');
+    $("#"+parent+" .tab-container").removeClass('tab-selected');
+    $("#"+parent+" "+id+"").addClass('tab-selected');
+    return false;
+});
+
 
 });
 </script>
