--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -327,6 +327,7 @@ width: 148px;
 }
 .navi nav.links a{
 padding: 0;
+margin-bottom: 8px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* CONTENT */
