--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -740,8 +740,20 @@ gap: 12px;
     <!-- showcase -->
     <div id="showcase" class="tab-block">
         <h4>Showcase</h4>
-        <div class="scrollable segment">
-            <p>dddddd</p>
+        <div id="initial-experience" class="scrollable segment">
+            <h3><a href="https://peteroper.github.io/portfolio/casestudies/intial-experience/">Initial Experience</a></h3>
+            <div id="showcaseA">
+                <span class="img"></span>
+            </div>
+        </div>
+        <div id="content-navigation" class="scrollable segment">
+            <h3><a href="https://peteroper.github.io/portfolio/casestudies/intial-experience/">Content Navigation</a></h3>
+            <div id="showcaseB">
+                <span class="img"></span>
+            </div>
+        </div>
+        <div id="information-architecture" class="scrollable segment">
+            <h3><a href="">Information Architecture</a></h3>
             <div id="showcase2">
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
                 <div>
