--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -281,6 +281,12 @@ display: flex;
 gap: 96px;
 padding: 96px 0 0 96px;
 }
+.tab-container{
+display: none!important;
+}
+.tab-container.tab-selected{
+display: flex!important;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
 /*/////////////////////////////////////////////////////////////*/
@@ -572,6 +578,42 @@ padding: 16px;
 #pain-points ol{
 flex-direction: column;
 gap: 12px;
+}
+/*/////////////////////////////////////////////////////////////*/
+#posts .post{
+width: 324px;
+ }
+#posts nav{
+display: none;
+}
+#posts .post .img, 
+#posts .post img{
+height: 52px;
+padding-bottom: 0;
+}
+#posts .posts-scrollable{
+width: 100%;
+height: 210px;
+flex-shrink: 0;
+overflow-x: auto;
+overflow-y: hidden;
+-webkit-overflow-scrolling: touch;
+overflow: -moz-scrollbars-horizontal;
+position: relative;
+}
+#posts .posts-scrollable > div{
+height: 100%;
+display: flex;
+gap: 16px;
+flex-direction: row;
+position: absolute;
+top: 0;
+left: 0;
+right: 0;
+}
+#posts .posts-scrollable .tab-container{
+    display: flex!important;
+    flex-direction: column;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
