--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -651,7 +651,7 @@ right: 0;
         </div>
     </div>
     <!-- posts start -->
-    <div id="posts" class=" section tab-block">
+    <div id="posts" class="section tab-block">
         <h4>Design Journal</h4>
         <nav class="tab-menu">
             <a href="#posts1" class="selected">1</a>
@@ -780,7 +780,7 @@ right: 0;
 
 
     <!-- showcase -->
-    <div id="showcase" class="tab-block">
+    <div id="showcase" class="section">
         <h4>Showcase</h4>
         <div id="initial-experience" class="scrollable segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/intial-experience/">Initial Experience</a></h3>
