--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -633,7 +633,7 @@ right: 0;
         <a href="#showcase">Case Studies</a>
         <a href="#initial-experience">Initial Experience</a>
         <a href="#content-navigation">Content Navigation</a>
-        <a href="#adventure-cards">Adventure Cards</a>
+        <a href="#adventurecards">Adventure Cards</a>
         <a href="#pulse-football">Pulse Football</a>
     </nav>
     <nav class="links">
@@ -784,17 +784,13 @@ right: 0;
         <h4>Showcase</h4>
         <div id="initial-experience" class="scrollable segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/intial-experience/">Initial Experience</a></h3>
-            <div id="showcaseA">
-                <span class="img"></span>
-            </div>
+            <span class="img"></span>
         </div>
         <div id="content-navigation" class="scrollable segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/intial-experience/">Content Navigation</a></h3>
-            <div id="showcaseB">
-                <span class="img"></span>
-            </div>
+            <span class="img"></span>
         </div>
-        <div id="information-architecture" class="scrollable segment">
+        <div id="adventurecards" class="scrollable segment">
             <h3><a href="">Information Architecture</a></h3>
             <div id="showcase2">
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
@@ -827,7 +823,7 @@ right: 0;
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.4.jpg" />
             </div>
         </div>
-        <div class="scrollable segment">
+        <div id="pulse-football" class="scrollable segment">
             <div id="showcase1">
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
             <div>     
