--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -361,7 +361,19 @@ margin-bottom: 8px;
 max-width: 668px;
 margin: bottom 16px;
 }
-
+.img{
+  position: relative;
+  width: 100%;
+  margin-bottom: 12px;
+  padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
+  display: block;
+  border-radius: 4px;
+}
+.img{
+  background-position: 50%;
+  background-repeat: no-repeat;
+  background-size: auto 100%;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* INTRO */
 /*/////////////////////////////////////////////////////////////*/
