--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -524,10 +524,10 @@ top: 0;
 left: 0;
 right: 0;
 }
-#showcase div{
+#showcase .scrollable div{
 padding: 40px;
 }
-#showcase div p{
+#showcase .scrollable div p{
 width: 440px;
 margin-bottom: 12px;
 }
@@ -797,11 +797,11 @@ right: 0;
     <!-- showcase -->
     <div id="showcase" class="section">
         <h4>Showcase</h4>
-        <div id="initial-experience" class="scrollable segment">
+        <div id="initial-experience" class="segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Initial Experience</a></h3>
             <span class="img"></span>
         </div>
-        <div id="content-navigation" class="scrollable segment">
+        <div id="content-navigation" class="segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Content Navigation</a></h3>
             <span class="img"></span>
         </div>
