--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -186,19 +186,13 @@ html, body {
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
 }
-/*@media only screen and (max-width: 424px) {
-*, body, p, b, h1, h2, h3, h4{
-font-size: 8px;
-}
-}*/
 h1,h2, h3,h4{
 font-weight: 700;
 line-height: 140%; 
-/*font-family: Lora;*/
 }
 h2 { font-size: 2em; }
 h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
-.segment h4, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
+h4, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 h4 a, p.l span, p u, p a, li b{
 font-size: 1em;
 }
@@ -339,10 +333,7 @@ margin-bottom: 8px;
 /* CONTENT */
 /*/////////////////////////////////////////////////////////////*/
 .body{
-    width: 768px;
-}
-.body h2{
-    margin-bottom: 12px;
+width: 768px;
 }
 .section{
 padding: 0 0 36px 0;
