--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -450,7 +450,7 @@ height: 20px;
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
 width: 100%;
-height: 540px;
+padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
 flex-shrink: 0;
 overflow-x: auto;
 overflow-y: hidden;
