--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -467,7 +467,7 @@ top: 0;
 left: 0;
 right: 0;
 }
-#showcase .scrollable div{
+#showcase .scrollable div div{
 padding: 40px;
 }
 #showcase .scrollable div p{
@@ -750,7 +750,7 @@ right: 0;
         </div>
         <div id="adventurecards" class="segment">
             <h3><a href="">Information Architecture</a></h3>
-            <div id="showcase2" class="scrollable">
+            <div id="showcase2" class="scrollable"><div>
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
                 <div>
                     <p class="l">Adventure Card is an Adventure Sports and Events organisation with upwards of 100 exciting activities found at over 5000 venues located in The UK and Australia.</p>
@@ -779,11 +779,11 @@ right: 0;
                     </ol>
                 </div>
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.4.jpg" />
-            </div>
+            </div></div>
         </div>
         <div id="pulse-football" class="segment">
             <h3><a href="">Pulse Football</a></h3>
-            <div id="showcase1" class="scrollable">
+            <div id="showcase1" class="scrollable"><div>
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
                 <div>     
                     <p class="l">Pulse Football is a one stop indepth app for fans who need more than just the news.</p>
@@ -805,7 +805,7 @@ right: 0;
                 </div>
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
             </div>
-        </div>
+        </div></div>
     </div>
     <!-- showcase ends -->
 </div>
