--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -612,7 +612,7 @@ right: 0;
         <a href="#posts">Design Journal</a>
     </nav>
     <nav>
-        <a href="#showcase">Case Studies</a>
+        <a href="#showcase">Showcase</a>
         <a href="#initial-experience">Initial Experience</a>
         <a href="#content-navigation">Content Navigation</a>
         <a href="#adventurecards">Adventure Cards</a>
