--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -481,6 +481,7 @@ overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
 overflow: -moz-scrollbars-horizontal;
 position: relative;
+border-radius: 4px;
 }
 #showcase .scrollable > div{
 height: 100%;
@@ -535,6 +536,21 @@ flex-direction: column;
 }
 .body{
 width: 100%;
+}
+/*/////////////////////////////////////////////////////////////*/
+#posts .post .img,
+#posts .post img{
+width: 74px;
+}
+#posts .post{
+gap: 12px;    
+}
+#posts .post > div{
+padding-right: 8px;
+gap: 0;
+}
+#posts .post .icn{
+display: none;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
