--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -781,15 +781,15 @@ right: 0;
     <div id="showcase" class="section">
         <h4>Showcase</h4>
         <div id="initial-experience" class="segment">
-            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Initial Experience</a></h3>
+            <h3><span>Case Study</span> <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Initial Experience</a></h3>
             <span class="img"></span>
         </div>
         <div id="content-navigation" class="segment">
-            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Content Navigation</a></h3>
+            <h3><span>Case Study</span> <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Content Navigation</a></h3>
             <span class="img"></span>
         </div>
         <div id="adventurecards" class="segment">
-            <h3><a href="">Information Architecture</a></h3>
+            <h3>Adventure Cards</h3>
             <div id="showcase2" class="scrollable"><div>
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase2.1.jpg" />
                 <div>
@@ -822,7 +822,7 @@ right: 0;
             </div></div>
         </div>
         <div id="pulse-football" class="segment">
-            <h3><a href="">Pulse Football</a></h3>
+            <h3>Pulse Football</h3>
             <div id="showcase1" class="scrollable"><div>
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg" />
                 <div>     
