--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -419,7 +419,7 @@ gap: 24px;
 }
 #posts .post{
 display: flex;
-margin-bottom: 12px;
+margin-bottom: 20px;
 /*align-items: center;*/
 flex: 1 0 0;
 }
@@ -441,6 +441,7 @@ flex: 1 0 0;
 #posts .post img{
 width: 104px;
 padding-bottom: 8%;
+margin: 0;
 display: block;
 background-size: 100% auto;
 }
