--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -216,7 +216,7 @@ text-decoration: underline;
 .navi a{
 opacity: 50%;    
 }
-#project ul p,
+h3 a,
 .navi nav.selected a:first-of-type,
 .navi a.selected{
 opacity: 92%;    
@@ -224,6 +224,7 @@ opacity: 92%;
 .section p{
 opacity: 68%;
 }
+h3 a,
 .navi a{
 color: #000;
 }
@@ -235,30 +236,7 @@ color: #FFF;
 h3,
 .navi nav.selected a:first-of-type,
 .navi nav .selected{
-    font-weight: bold;
-}
-/*/////////////////////////////////////////////////////////////*/
-#showcase1 div{
-background: linear-gradient(90deg, #21134E 0%, #000 100%);
-}
-#showcase1 div.hypothesis{
-background: #000;
-}
-#showcase2{
-color: #222;
-background-color: #EEAD50;
-}
-#showcase2 div{
-color: #FFF;
-background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
-}
-#showcase2 div.hypothesis{
-color: #000;
-background: #FAA525;
-}
-#showcase2 div.research{
-color: #FFF;
-background: linear-gradient(270deg, #5176BA 0.40%, #32905D 100%);
+font-weight: bold;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
@@ -289,6 +267,31 @@ background: #88A4AA;
 .navi nav.links,
 .section{
     border-color: #D5D5D5;
+}
+/*/////////////////////////////////////////////////////////////*/
+/* SHOWCASE */
+/*/////////////////////////////////////////////////////////////*/
+#showcase1 div{
+background: linear-gradient(90deg, #21134E 0%, #000 100%);
+}
+#showcase1 div.hypothesis{
+background: #000;
+}
+#showcase2{
+color: #222;
+background-color: #EEAD50;
+}
+#showcase2 div{
+color: #FFF;
+background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
+}
+#showcase2 div.hypothesis{
+color: #000;
+background: #FAA525;
+}
+#showcase2 div.research{
+color: #FFF;
+background: linear-gradient(270deg, #5176BA 0.40%, #32905D 100%);
 }
 /*/////////////////////////////////////////////////////////////*/
 /* LAYOUT */
