--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -370,14 +370,17 @@ border-style: solid;
 .segment{
 padding-bottom: 36px;
 }
-.segment h3,
-.segment h4{
+.section h3,
+.section h4{
 margin-bottom: 8px;
 }
-.segment p{
+.section p{
 max-width: 668px;
 margin: bottom 16px;
 }
+/*/////////////////////////////////////////////////////////////*/
+/* IMGS */
+/*/////////////////////////////////////////////////////////////*/
 .img{
   position: relative;
   width: 100%;
