--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -186,6 +186,11 @@ html, body {
 *, body, p, p b, h1, h2, h3, h4{
     font-size: 10px;
 }
+@media only screen and (max-width: 424px) {
+*, body, p, b, h1, h2, h3, h4{
+font-size: 8px;
+}
+}
 h1,h2, h3,h4{
 font-weight: 700;
 line-height: 140%; 
