--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -218,6 +218,7 @@ text-decoration: underline;
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
 .segment h4,
+#posts p,
 .navi a{
 opacity: 50%;    
 }
@@ -447,6 +448,9 @@ display: flex;
 flex-direction: column;
 align-items: flex-start;
 flex: 1 0 0;
+}
+#posts .post h3{
+    margin-bottom: 4px;
 }
 #posts .post .img,
 #posts .post img{
