--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -217,7 +217,7 @@ text-decoration: underline;
 /*/////////////////////////////////////////////////////////////*/
 /* COLOR */
 /*/////////////////////////////////////////////////////////////*/
-.segment h4,
+.section h4,
 #posts p,
 .navi a{
 opacity: 50%;    
@@ -450,7 +450,7 @@ align-items: flex-start;
 flex: 1 0 0;
 }
 #posts .post h3{
-    margin-bottom: 4px;
+    margin-bottom: 0;
 }
 #posts .post .img,
 #posts .post img{
