--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -525,6 +525,9 @@ margin-bottom: 12px;
     top: 0; 
     padding-top: 48px;
 }
+.container{
+    flex-direction: column-reverse;
+}
 /*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -636,27 +639,6 @@ right: 0;
 </head>
 <body>
 <div class="container">
-<div class="navi sticky-element">
-    <nav>
-        <a href="#about" class="selected">About</a>
-    </nav>
-    <nav>
-        <a href="#posts">Design Journal</a>
-    </nav>
-    <nav>
-        <a href="#showcase">Showcase</a>
-        <a href="#initial-experience">Initial Experience</a>
-        <a href="#content-navigation">Content Navigation</a>
-        <a href="#adventurecards">Adventure Cards</a>
-        <a href="#pulse-football">Pulse Football</a>
-    </nav>
-    <nav class="links">
-        <a href="#">LinkedIn</a>
-        <a href="#">LINE</a>
-        <a href="#ideation">Resume</a>
-        <a href="mailto@peter.roper.jp@gmail.com">Email</a>
-    </nav>
-</div>
 <div class="body">
     <div id="casestudies" class="section">
         <div class="segment">
@@ -864,6 +846,29 @@ right: 0;
         </div></div>
     </div>
     <!-- showcase ends -->
+
+    <div class="navi sticky-element">
+        <nav>
+            <a href="#about" class="selected">About</a>
+        </nav>
+        <nav>
+            <a href="#posts">Design Journal</a>
+        </nav>
+        <nav>
+            <a href="#showcase">Showcase</a>
+            <a href="#initial-experience">Initial Experience</a>
+            <a href="#content-navigation">Content Navigation</a>
+            <a href="#adventurecards">Adventure Cards</a>
+            <a href="#pulse-football">Pulse Football</a>
+        </nav>
+        <nav class="links">
+            <a href="#">LinkedIn</a>
+            <a href="#">LINE</a>
+            <a href="#ideation">Resume</a>
+            <a href="mailto@peter.roper.jp@gmail.com">Email</a>
+        </nav>
+    </div>
+
 </div>
 
 </div>
