--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -549,6 +549,9 @@ width: calc(33% - 50px); /* Adjust the width as needed */
 .navi nav{
 display: none!important;
 }
+.navi nav.links{
+    display: block!important;
+}
 .container{
 padding: 40px;
 flex-direction: column;
