--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -783,11 +783,11 @@ right: 0;
         <h4>Showcase</h4>
         <div id="initial-experience" class="segment">
             <h3><span>Case Study</span> <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Initial Experience</a></h3>
-            <span class="img"></span>
+            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"></a>
         </div>
         <div id="content-navigation" class="segment">
             <h3><span>Case Study</span> <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Content Navigation</a></h3>
-            <span class="img"></span>
+            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"><a>
         </div>
         <div id="adventurecards" class="segment">
             <h3>Adventure Cards</h3>
