--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -278,6 +278,7 @@ background: #88A4AA;
 /* SHOWCASE */
 /*/////////////////////////////////////////////////////////////*/
 #showcase1 div{
+color: #FFF;
 background: linear-gradient(90deg, #21134E 0%, #000 100%);
 }
 #showcase1 div.hypothesis{
