--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -272,7 +272,7 @@ background: #88A4AA;
 /*/////////////////////////////////////////////////////////////*/
 .navi nav.links,
 .section{
-    border-color: #D5D5D5;
+    border-color: #EFEFEF;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
