--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -300,7 +300,7 @@ width: 244px;
     display: inline-block;
 }
 .navi .back:hover{
-    text-decoration none!important;
+    text-decoration: none!important;
 }
 .navi .back .icn{
     width: 36px;
