--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -168,6 +168,10 @@ line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
 }
+h1,h2,h3,h4,p.l span,p.l,h4 a{
+font-family: 'Merriweather','Lora';
+font-family: 'Lora';
+}
 .b span{
 font-weight: bold;
 }
