--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -251,6 +251,7 @@ font-weight: bold;
 /*/////////////////////////////////////////////////////////////*/
 /* BACKGROUND */
 /*/////////////////////////////////////////////////////////////*/
+#showcase h3 a span,
 .navi .back,
 .section .img{
 background-color: #E9E9ED;
@@ -492,6 +493,12 @@ height: 20px;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
+/*/////////////////////////////////////////////////////////////*/
+#showcase h3 a span{
+    line-height: 30px;
+    padding: 0 8px;
+    border-radius: 100px;
+}
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
 width: 100%;
@@ -787,11 +794,11 @@ right: 0;
     <div id="showcase" class="section">
         <h4>Showcase</h4>
         <div id="initial-experience" class="segment">
-            <h3><span>Case Study</span> <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Initial Experience</a></h3>
+            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Initial Experience <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"></a>
         </div>
         <div id="content-navigation" class="segment">
-            <h3><span>Case Study</span> <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Content Navigation</a></h3>
+            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Content Navigation <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"><a>
         </div>
         <div id="adventurecards" class="segment">
