--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -494,10 +494,16 @@ height: 20px;
 /*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
 /*/////////////////////////////////////////////////////////////*/
-#showcase h3 a span{
+#showcase h3 a{
+    line-height: 30px;
+}
+#showcase h3 a > span{
     line-height: 30px;
     padding: 0 8px;
     border-radius: 100px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 /*/////////////////////////////////////////////////////////////*/
 #showcase .scrollable{
