--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -805,7 +805,7 @@ right: 0;
         </div>
         <div id="content-navigation" class="segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Content Navigation <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
-            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"></div>a>
+            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"></a>
         </div>
         <div id="adventurecards" class="segment">
             <h3>Adventure Cards</h3>
