--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -863,11 +863,11 @@ right: 0;
                     <p>Thanks to the advent of AI, it is now possible to aggregate and combine football information to cater to users' specific needs. This includes providing comprehensive analysis, data insights, and an all-in-one football experience.</p>
                 </div>
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
-            </div>
-        </div></div>
+            </div></div>
+        </div>
+        <!-- showcase ends -->
     </div>
-    <!-- showcase ends -->
-
+    <!-- body ENDS -->
     <div class="navi sticky-element">
         <nav>
             <a href="#about" class="selected">About</a>
