--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -496,6 +496,8 @@ height: 20px;
 /*/////////////////////////////////////////////////////////////*/
 #showcase h3 a{
     line-height: 30px;
+    position: relative;
+    display: block;
 }
 #showcase h3 a > span{
     line-height: 30px;
