--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -803,10 +803,10 @@ right: 0;
         <h4>Showcase</h4>
         <div id="initial-experience" class="segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Initial Experience <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
-            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"></a>
+            <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" class="img"></a>
         </div>
         <div id="content-navigation" class="segment">
-            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/">Content Navigation <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
+            <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy2.1.png);">Content Navigation <span>Case Study <span class="icn material-icons">chevron_right</span></span></a></h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img"></a>
         </div>
         <div id="adventurecards" class="segment">
