--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -663,7 +663,7 @@ right: 0;
 <body>
 <div class="container">
 <div class="body">
-    <div id="casestudies" class="section">
+    <div id="intro" class="section">
         <div class="segment">
             <p class="l b"><span>Hi I’m Pete, a British Product Designer based in Tokyo with a back pocket brimming with experience.</span> I have created digital products since the very early days of the internets transition into visual design.</p>
             <p class="m web-only">For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational insurance and tech-support provider.</p>
@@ -872,7 +872,7 @@ right: 0;
     <!-- body ENDS -->
     <div class="navi sticky-element">
         <nav>
-            <a href="#about" class="selected">About</a>
+            <a href="#intro" class="selected">About</a>
         </nav>
         <nav>
             <a href="#posts">Design Journal</a>
