--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -282,27 +282,28 @@ background: #88A4AA;
 /*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
 /*/////////////////////////////////////////////////////////////*/
+#showcase2 div,
 #showcase1 div{
 color: #FFF;
+}
+/*/////////////////////////////////////////////////////////////*/
+#showcase1 div{
 background: linear-gradient(90deg, #21134E 0%, #000 100%);
 }
 #showcase1 div.hypothesis{
 background: #000;
 }
+/*/////////////////////////////////////////////////////////////*/
 #showcase2{
-color: #222;
 background-color: #EEAD50;
 }
 #showcase2 div{
-color: #FFF;
 background: linear-gradient(270deg, #EA6926 0%, #D52D28 66.67%, #C72B26 98.96%);
 }
 #showcase2 div.hypothesis{
-color: #000;
 background: #FAA525;
 }
 #showcase2 div.research{
-color: #FFF;
 background: linear-gradient(270deg, #5176BA 0.40%, #32905D 100%);
 }
 /*/////////////////////////////////////////////////////////////*/
