--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -871,6 +871,7 @@ right: 0;
         <!-- showcase ends -->
     </div>
     <!-- body ENDS -->
+
     <div class="navi sticky-element">
         <nav>
             <a href="#intro" class="selected">About</a>
@@ -892,6 +893,7 @@ right: 0;
             <a href="mailto@peter.roper.jp@gmail.com">Email</a>
         </nav>
     </div>
+    <!-- NAVI ENDS -->
 
 </div>
 
