--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -199,7 +199,8 @@ h1,h2, h3,h4{
 font-weight: 700;
 line-height: 140%; 
 }
-h2 { font-size: 2em; }
+h2 { font-size: 2.2em; }
+p.l { font-size: 1.8em; }
 h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 h3 a, p.l span, p u, p a, li b{
@@ -234,6 +235,7 @@ opacity: 92%;
 .section p{
 opacity: 68%;
 }
+/*/////////////////////////////////////////////////////////////*/
 h3 a,
 .navi a{
 color: #000;
@@ -242,7 +244,9 @@ color: #000;
 .special ul li h3:before{
 color: #FFF;
 }
+/*/////////////////////////////////////////////////////////////*/
 .special > p,
+p.l span,
 h3,
 .navi nav.selected a:first-of-type,
 .navi nav .selected{
