--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -798,6 +798,7 @@ right: 0;
                 </div>   
             </div>
             <!-- post 3 -->
+        </div>
         
         </div></div>
 
