--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -875,6 +875,7 @@ right: 0;
                 <img src="https://peteroper.github.io/portfolio/assets/imgs/showcase1.3.jpg" />
             </div></div>
         </div>
+        </div>
         <!-- showcase ends -->
     </div>
     <!-- body ENDS -->
