--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -193,6 +193,7 @@ html, body {
 @media only screen and (max-width: 424px) {
 *, body, p, b, h1, h2, h3, h4{
 font-size: 8px;
+text-rendering: optimizeLegibility;
 }
 }
 h1,h2, h3,h4{
