--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -562,7 +562,7 @@ margin-bottom: 12px;
     padding-top: 48px;
 }
 .container{
-    flex-direction: column-reverse;
+    flex-direction: row-reverse;
 }
 /*/////////////////////////////////////////////////////////////*/
 }
