--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -322,6 +322,7 @@ background: linear-gradient(270deg, #5176BA 0.40%, #32905D 100%);
 /*/////////////////////////////////////////////////////////////*/
 .container{
 display: flex;
+align-items: flex-start;
 gap: 96px;
 padding: 96px 0 0 96px;
 }
