--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -251,6 +251,9 @@ color: #000;
 .special ul li h3:before{
 color: #FFF;
 }
+.icn{
+    color: #346672;
+}
 /*/////////////////////////////////////////////////////////////*/
 .special > p,
 p.l span,
