--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -168,7 +168,7 @@ line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
 }
-h1, h2, h3, p.l{
+h1, h2, h3, p.l, p.l span{
 font-family: 'Merriweather','Lora';
 font-family: 'Lora';
 }
@@ -241,6 +241,9 @@ opacity: 92%;
 }
 .section p{
 opacity: 68%;
+}
+.section p span{
+    opacity: 100%;
 }
 /*/////////////////////////////////////////////////////////////*/
 h3 a,
