--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -202,7 +202,7 @@ line-height: 140%;
 }
 h2 { font-size: 2.2em; }
 p.l { font-size: 1.8em; }
-h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+#posts nav a, h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 #showcase h3 a > span,
 h3 a, 
@@ -212,7 +212,9 @@ p a,
 li b{
 font-size: 1em;
 }
-#showcase h3 a > span,
+#showcase h3 a > span{
+    font-size: 0.8em;        
+}
 .special ul li h3:before{
     font-size: 0.68em;    
 } 
@@ -272,6 +274,7 @@ font-weight: bold;
 .section .img{
 background-color: #E9E9ED;
 }
+#posts nav a,
 #showcase h3 a > span,
 .special.v1{
 background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #88A4AA;
@@ -493,10 +496,12 @@ align-self: stretch;
 #posts .icn{
 width: 20px;
 height: 20px;
+padding: 8px;
 }
 #posts .tab-container.tab-selected{
     flex-direction: column;
 }
+/*/////////////////////////////////////////////////////////////*/
 #posts nav{
     position: absolute;
     top: -1px;
@@ -520,7 +525,7 @@ height: 20px;
 }
 #showcase h3 a > span{
     line-height: 30px;
-    padding: 0 12px;
+    padding: 0 8px;
     border-radius: 100px;
     position: absolute;
     top: 0;
