--- a/casestudies/initial-experience/index.html
+++ b/casestudies/initial-experience/index.html
@@ -268,6 +268,7 @@ background: #88A4AA;
 /*/////////////////////////////////////////////////////////////*/
 .container{
 display: flex;
+justify-content: center;
 gap: 0;
 padding: 96px 0 0 96px;
 }
