--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -453,6 +453,24 @@ margin: 0 0 12px 0;
 #posts{
     position: relative;
 }
+#posts h4{
+    line-height: 30px;
+}
+/*/////////////////////////////////////////////////////////////*/
+#posts nav{
+    position: absolute;
+    top: -1px;
+    right: 0;
+}
+#posts nav a{
+    display: inline-block;
+    width: 30px;
+    line-height: 30px;
+    text-align: center;
+    margin: 0 0 0 4px;
+    text-decoration: none;
+}
+/*/////////////////////////////////////////////////////////////*/
 #posts .post,
 #posts .post > div{
 gap: 24px;
@@ -502,20 +520,6 @@ padding: 8px;
     flex-direction: column;
 }
 /*/////////////////////////////////////////////////////////////*/
-#posts nav{
-    position: absolute;
-    top: -1px;
-    right: 0;
-}
-#posts nav a{
-    display: inline-block;
-    width: 36px;
-    line-height: 36px;
-    text-align: center;
-    margin: 0 0 0 4px;
-    text-decoration: none;
-}
-/*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
 /*/////////////////////////////////////////////////////////////*/
 #showcase h3 a{
@@ -525,7 +529,7 @@ padding: 8px;
 }
 #showcase h3 a > span{
     line-height: 30px;
-    padding: 0 8px;
+    padding: 0 8px 0 12px;
     border-radius: 100px;
     position: absolute;
     top: 0;
