--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -176,7 +176,7 @@ font-family: 'Lora';
 font-weight: bold;
 }
 li{ list-style-position: inside;}
-nav a {  
+.navi nav a {  
   font-weight: 400;
   opacity: 50%;
   transition: font-weight 0.3s ease-in-out, opacity 0.3s ease-in-out;
@@ -249,7 +249,7 @@ opacity: 68%;
 }
 /*/////////////////////////////////////////////////////////////*/
 h3 a,
-.navi a{
+nav a{
 color: #000;
 }
 #project ul span,
@@ -275,7 +275,9 @@ font-weight: bold;
 background-color: #E9E9ED;
 }
 #posts nav a,
-#showcase h3 a > span,
+#showcase h3 a > span{
+    background: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.68) 100%), #88A4AA;    
+}
 .special.v1{
 background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #88A4AA;
 }
