--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -301,6 +301,15 @@ background: #88A4AA;
 .section{
     border-color: #EFEFEF;
 }
+#showcase-scrollable,
+.img,
+#showcase h3 a > span,
+#posts nav a{
+    border-radius: 4px;
+}
+.navi .back{
+    border-radius: 100px;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* SHOWCASE */
 /*/////////////////////////////////////////////////////////////*/
@@ -369,7 +378,6 @@ width: 148px;
 }
 .navi .back{
     margin-bottom: 12px;
-    border-radius: 100px;
     display: inline-block;
 }
 .navi .back:hover{
@@ -423,7 +431,6 @@ margin: bottom 16px;
   margin-bottom: 12px;
   padding-bottom: 56.25%; /* 16:9 aspect ratio (9 / 16 * 100) */
   display: block;
-  border-radius: 4px;
 }
 .img{
   background-position: 50%;
@@ -532,7 +539,6 @@ padding: 8px;
 #showcase h3 a > span{
     line-height: 30px;
     padding: 0 8px 0 12px;
-    border-radius: 100px;
     position: absolute;
     top: 0;
     right: 0;
@@ -551,7 +557,6 @@ overflow-y: hidden;
 -webkit-overflow-scrolling: touch;
 overflow: -moz-scrollbars-horizontal;
 position: relative;
-border-radius: 4px;
 }
 #showcase .scrollable > div{
 height: 100%;
