--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -202,8 +202,8 @@ line-height: 140%;
 }
 h2 { font-size: 2.2em; }
 p.l { font-size: 1.8em; }
-#posts nav a, h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
-h4, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
+h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 #showcase h3 a > span,
 h3 a, 
 p.l span, 
