--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -466,11 +466,11 @@ margin: 0 0 12px 0;
     line-height: 30px;
 }
 /*/////////////////////////////////////////////////////////////*/
-#posts nav{
+/*#posts nav{
     position: absolute;
     top: -1px;
     right: 0;
-}
+}*/
 #posts nav a{
     display: inline-block;
     width: 30px;
@@ -712,11 +712,6 @@ right: 0;
     <!-- posts start -->
     <div id="posts" class="section tab-block">
         <h4>Design Journal</h4>
-        <nav class="tab-menu">
-            <a href="#posts1" class="selected">1</a>
-            <a href="#posts2">2</a>
-            <a href="#posts3">3</a>
-        </nav>
         <div class="posts-scrollable"><div>
         <!-- POSTS TAB 1 -->
         <div id="posts1" class="segment tab-container tab-selected">
@@ -835,6 +830,12 @@ right: 0;
         </div>
         
         </div></div>
+
+        <nav class="tab-menu">
+            <a href="#posts1" class="selected">1</a>
+            <a href="#posts2">2</a>
+            <a href="#posts3">3</a>
+        </nav>
 
     </div>
     <!-- posts ends -->
