--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -419,7 +419,9 @@ border-style: solid;
 .segment{
 padding-bottom: 36px;
 }
-.section h3,
+.section h3{
+margin-bottom: 16px;
+}
 .section h4{
 margin-bottom: 8px;
 }
