--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -168,7 +168,7 @@ line-height: 160%;
 overflow: initial;
 -webkit-font-smoothing: subpixel-antialiased !important;
 }
-h1, h2, h3, p.l, p.l span{
+h1, h2, h3, h3 a, p.l, p.l span{
 font-family: 'Merriweather','Lora';
 font-family: 'Lora';
 }
