--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -278,7 +278,7 @@ background-color: #E9E9ED;
 }
 #posts nav a.selected,
 #showcase h3 a > span{
-    background: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.68) 100%), #88A4AA;    
+    background: #E3E9F0    
 }
 .special.v1{
 background: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #88A4AA;
@@ -304,8 +304,10 @@ background: #88A4AA;
     border-color: #EFEFEF;
 }
 #posts nav a{
-    border-color: linear-gradient(0deg, rgba(255, 255, 255, 0.68) 0%, rgba(255, 255, 255, 0.68) 100%), #E9E9ED;
+    border-color: #E3E9F0;
 }
+}
+/*/////////////////////////////////////////////////////////////*/
 #showcase-scrollable,
 .img,
 #showcase h3 a > span,
