--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -212,9 +212,7 @@ p a,
 li b{
 font-size: 1em;
 }
-#showcase h3 a > span{
-    font-size: 0.8em;        
-}
+#showcase h3 a > span,
 .special ul li h3:before{
     font-size: 0.68em;    
 } 
