--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -201,8 +201,8 @@ font-weight: 700;
 line-height: 140%; 
 }
 h2 { font-size: 2.2em; }
-#showcase h3, p.l { font-size: 1.8em; }
-h3, .navi nav a:first-of-type, p{ font-size: 1.6em; }
+h3, p.l { font-size: 1.8em; }
+.navi nav a:first-of-type, p{ font-size: 1.6em; }
 h4, #posts nav a, .navi nav a, .navi nav.links a{ font-size: 1.3em; }
 #showcase h3 a > span,
 h3 a, 
