--- a/casestudies/index.html
+++ b/casestudies/index.html
@@ -305,7 +305,7 @@ background: #88A4AA;
     border-color: #E3E9F0;
 }
 /*/////////////////////////////////////////////////////////////*/
-#showcase-scrollable,
+#showcase .scrollable,
 .img,
 #showcase h3 a > span,
 #posts nav a{
